YT-17471: More documentation for operation specs 1. Add documentation for all specs 2. Remove methods for non-existent spec parameters (sort_job_count and max_data_size_per_sort_job) and its usages (in direct, crypta and market).